--- a/payment_jetcheckout/report/report.xml
+++ b/payment_jetcheckout/report/report.xml
@@ -64,6 +64,7 @@
                                                     <span name="partner_name" class="d-block" style="width: 322px; color: #000000;">Partner</span>
                                                     <span style="font-size: 16px; color: #000000; font-weight: bold; display: block; width: 322px;"><span t-field="doc.partner_name"/></span>
                                                     <span name="partner_vat" style="font-size: 14px; color: #000000; display: block; width: 322px;">Vat: <span t-field="doc.partner_vat"/></span>
+                                                    <span name="partner_phone" style="font-size: 14px; color: #000000; display: block; width: 322px;">Phone: <span t-field="doc.partner_phone"/></span>
                                                 </td>
                                                 <td t-if="is_conveyance" width="322" height="93" style="width:322px;height:93px;text-align:right;font-size:12px;color: #000000;font-family:'Trebuchet MS', Arial, Verdana, sans-serif" align="right" valign="middle">			
                                                     <span style="width:322px;display:block;color: #000000;">System User Company</span>
@@ -124,7 +125,12 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td width="322" height="25" style="width: 322px; height: 25px; text-align: left; font-size: 12px; color: #000000; font-family: 'Trebuchet MS', Arial, Verdana, sans-serif;" align="left" valign="middle">Payer: <strong t-field="doc.partner_name"/>
+                                                <td width="322" height="25" style="width: 322px; height: 25px; text-align: left; font-size: 12px; color: #000000; font-family: 'Trebuchet MS', Arial, Verdana, sans-serif;" align="left" valign="middle">
+                                                    Payer: <strong t-field="doc.partner_name"/>
+                                                    <t t-if="doc.paylox_description">
+                                                        <br/>
+                                                        Description: <strong t-field="doc.paylox_description"/>
+                                                    </t>
                                                 </td>
                                                 <td width="322" height="25" style="width: 322px; height: 25px; text-align: right; font-size: 12px; color: #000000; font-family: 'Trebuchet MS', Arial, Verdana, sans-serif;" align="right" valign="middle"><span t-field="doc.partner_email"/>
                                                 </td>
