--- a/payment_jetcheckout/views/transaction.xml
+++ b/payment_jetcheckout/views/transaction.xml
@@ -174,6 +174,7 @@
             <field name="partner_vat" optional="hide"/>
         </xpath>
         <xpath expr='//field[@name="amount"]' position="after">
+            <field name="paylox_description" string="Description" optional="hide"/>
             <field name="jetcheckout_vpos_name" optional="hide"/>
             <field name="jetcheckout_payment_amount" optional="hide"/>
             <field name="jetcheckout_customer_rate" string="Customer Rate (%)" optional="hide" groups="payment_jetcheckout.group_transaction_commission"/>
