--- a/payment_jetcheckout_system/views/item.xml
+++ b/payment_jetcheckout_system/views/item.xml
@@ -4,13 +4,15 @@
     <field name="name">payment.item.tree</field>
     <field name="model">payment.item</field>
     <field name="arch" type="xml">
-        <tree editable="top" sample="1" js_class="system_item">
+        <tree editable="top" sample="1" js_class="system_item" decoration-muted="date_expired == True">
             <field name="child_id" required="1" force_save="1" options="{'no_open': True, 'no_create': True}" invisible="context.get('domain',False)" domain="[('parent_id', '!=', False), ('system', '=', context.get('active_system')), ('company_id', '=', company_id)]"/>
             <field name="parent_id" string="Parent" required="1" force_save="1" options="{'no_create': True}" domain="[('parent_id','=',False), ('system', '=', context.get('active_system')),('child_ids','!=',False),('company_id','=',company_id)]"/>
             <field name="parent_ref" optional="hide"/>
             <field name="campaign_id" optional="show" options="{'no_create': True, 'no_open': True}"/>
             <field name="amount" attrs="{'readonly': [('paid', '=', True), ('amount', '!=', 0)]}"/>
             <field name="date" optional="hide"/>
+            <field name="date_expire" optional="hide"/>
+            <field name="date_expired" invisible="1"/>
             <field name="due_date" optional="hide"/>
             <field name="ref" optional="hide"/>
             <field name="tag" optional="hide"/>
