--- a/payment_syncops/wizards/sync.xml
+++ b/payment_syncops/wizards/sync.xml
@@ -38,6 +38,7 @@
         <xpath expr="//tree/field[@name='name']" position="after">
             <field name="partner_ref" string="Reference" optional="hide"/>
             <field name="partner_email" string="Email"/>
+            <field name="partner_iban" string="IBAN"/>
             <field name="partner_phone" string="Phone" optional="hide"/>
             <field name="partner_mobile" string="Mobile" optional="hide"/>
             <field name="partner_campaign" string="Campaign" optional="hide"/>
